[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-channel = "1.8.0"
clap = { version = "4.1.6", features = ["derive"] }
lib-wc = "0.1.14"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.14.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
